@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.115 2007/05/04 23:20:53 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.116 2007/07/03 23:58:06 snikkel Exp $
 ==========================================================================
 
 2.9000
@@ -31,6 +31,8 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.115 2007/05/04 23:20:53 snikkel Ex
 2.9013-500  imp: x86: Faster RC5-72 GO-2 core (#3265)
             chg: x86: GO-2 core is now the default selection for P4
             chg: x86: OGR core selection for P4 (#3988 and others)
+            chg: all: default work precedence is now OGR-P2,RC5-72
+            chg: all: default buffer level checking set to 4
 
 2.9013-499  imp: x86: Faster OGR MMX cores (1-3%, depending on CPU)
 
